# LQRController

./: .gitignore  .gitmodules  CMakeLists.txt  test_lqr.cpp
include/: lqr_controller.hpp
